--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project</title>
-    <link rel="stylesheet" type="text/css" href="/project/style/reset.css" />
-    <link rel="stylesheet" type="text/css" href="/project/style/style.css" />
+    <link rel="stylesheet" type="text/css" href="style/reset.css" />
+    <link rel="stylesheet" type="text/css" href="style/style.css" />
   </head>
   <body>
     <!-- 배경 -->
@@ -22,3 +22,4 @@
     <!-- 사람 -->
     <img src="asset/human_01.png" class="human_01-img" />
 </html>
+
