--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <!-- 배경 -->
-    <img src="/project/asset/bg.png" class="bg-img" />
+    <img src="asset/bg.png" class="bg-img" />
     </div>
     <!-- 구름 -->
     <img src="asset/cloud_01.png" class="cloud_01-img" />
@@ -22,4 +22,5 @@
     <!-- 사람 -->
     <img src="asset/human_01.png" class="human_01-img" />
 </html>
+
 
